htdocs/t/shop/_good.css
#common-main-wrapper { font-size: 16px; }
#map .point .icon { cursor: default; }

/* COMMON */
.common-name span { font-size: 32px; line-height: 1px; }
.common-content { margin: 0 0 30px; }
#cocktails { padding: 30px 0 0; border-top: 1px solid #ccc; background: linear-gradient(to bottom, #e0e0e0 0%, rgba(255,255,255,0) 40px); }
#cocktails .common-content-area { padding: 20px 40px; }
#cocktails .title { text-align: center; font-size: 24px; line-height: 31px; letter-spacing: 1px; }
/* END COMMON */

/* COCKTAILS */
#cocktails .list { margin: 10px 0 49px; text-align: center; }
#cocktails .list li { display: inline-block; text-align: center; vertical-align: top; width: 200px; height: 217px; margin: 65px 20px 10px; font-size: 14px; }
#cocktails .list li a { color: #000; }
#cocktails .list li .image { height: 166px; margin: 0 0 10px; text-align: center; position: relative; }
#cocktails .list li .image img { position: absolute; left: 0; right: 0; bottom: 0; margin: 0 auto; max-width: 55%; }
/* END COCKTAILS */

<!--# include virtual="we-have-more.css" -->
<!--# include virtual="promo.css" -->

/* MAP */
<!--# include virtual="map.css" -->
#map { display: block; }
#map .close { display: none; }
/* END MAP */

#promo { padding-top: 0; margin: 0;}

.photos { position: relative; }
.photos .viewport { overflow:hidden; position:relative; height:374px; }
.photos .surface { height: 100%; white-space: nowrap; }
.photos .point { display: inline-block; vertical-align: top; width: 100%; height: 100%; }

.photos .prev,
.photos .next { display: none; position: absolute; top: 158px; z-index: 10; width: 60px; height: 60px; background: url(photos-buttons.png); }
.photos:hover .prev,
.photos:hover .next { display: block; }
.photos .prev { left: 0; background-position: -60px 0; }
.photos .next { right: 0; background-position: 0 0; }
.photos .prev.disabled,
.photos .next.disabled { display: none; }

